style: avoid window controls overlay covering SiYuan toolbar buttons (#13771)
Since we already declares "window-controls-overlay" in our PWA manifest file, we also need to care about the actual place taken by the window controls overlay.

See also:

- https://web.dev/articles/window-controls-overlay

Resolve: https://github.com/siyuan-note/siyuan/issues/13226

--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -106,6 +106,9 @@ html {
 
   &--browser {
     padding-left: 0;
+    margin-left: env(titlebar-area-x, 0);
+    width: env(titlebar-area-width, 100%);
+    height: env(titlebar-area-height, 32px);
   }
 
   #windowControls {
